--- a/src/frontend/dam/src/app/detalle-sensor/detalle-sensor.component.html
+++ b/src/frontend/dam/src/app/detalle-sensor/detalle-sensor.component.html
@@ -1,11 +1,10 @@
 <div id="gauge-chart-container" style="width: 100%; height: 400px;"></div>
 
 <div class="button-container">
-  <button appConfirmAction="Are you sure you want to open the valve?" class="button" (click)="openElectrovalve()">Abrir Electrovalvula</button>
   <button class="button"(click)="toggleElectrovalve()">
     {{ electrovalveOpen ? 'CERRAR ELECTROVALVULA' : 'ABRIR ELECTROVALVULA' }}
   </button>
-  <button class="button" (click)="verTodasLasMediciones(deviceId)">Ver Todas las Mediciones</button>
+  <button class="button" (click)="verTodasLasMediciones(deviceId)">VER TODAS LAS MEDICIONES</button>
   <table class="measurement-table" *ngIf="measurements.length > 0">
     <thead>
       <tr>
@@ -20,7 +19,7 @@
       </tr>
     </tbody>
   </table>
-  <button class="button" (click)="verLogRiegosElectrovalvula(electrovalveId)">Ver Log Riegos</button>
+  <button class="button" (click)="verLogRiegosElectrovalvula(electrovalveId)">VER LOG RIEGOS</button>
   <table class="measurement-table" *ngIf="riegos.length > 0">
     <thead>
       <tr>
