--- a/src/frontend/dam/src/app/home/home.page.html
+++ b/src/frontend/dam/src/app/home/home.page.html
@@ -1,40 +1,16 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar class="toolbar">
     <ion-title>
-      Dispositivos App
+      DISPOSITIVOS APP
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" class="content">
   <div class="container">
-    <button ion-button color="primary" class="custom-button">Enter</button>
+    <div class="box">
+      <h2>Bienvenido</h2>
+      <button ion-button class="button-styling" (click)="navigateToDispositivos()">VER DISPOSITIVOS</button>
+    </div>
   </div>
 </ion-content>
-
-<style>
-  .content {
-    --background: url('https://images.deepai.org/art-image/24f5d59874364c9f8e28fa6e728a1c82/i-need-a-light-violet-image-representing-a-barometer-.jpg') center center / cover no-repeat; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .container {
-    text-align: center;
-  }
-
-  .custom-button {
-    background-color: #b3b3b3; /* gray button */
-    color: white;
-    font-size: 1.5em; /* larger font size */
-    padding: 15px 30px; /* larger padding */
-    border-radius: 10px; /* rounded corners */
-    border: none; /* remove button border */
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); /* add shadow */
-  }
-
-  .custom-button:hover {
-    background-color: #999999; /* darker gray on hover */
-  }
-</style>
