change styles dispositivos page

--- a/src/frontend/dam/src/app/dispositivos/dispositivos.page.html
+++ b/src/frontend/dam/src/app/dispositivos/dispositivos.page.html
@@ -5,19 +5,18 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" scrollY="true" class="device-list">
-  <ion-searchbar [(ngModel)]="searchText"></ion-searchbar>
+  <ion-searchbar [(ngModel)]="searchText" class="search-bar"></ion-searchbar>
 
-  <div appColorear>Texto a colorear</div>
   <div class="center-container">
     <ion-list class="device-list">
       <ion-item *ngFor="let device of devices | filter: searchText" 
                 (click)="showSensorDetails(device.dispositivoId, device.nombre, device.electrovalvulaId)" 
                 button="true" 
                 class="device-item"
-                [appTooltip]="device.nombre + ' - ID: ' + device.dispositivoId + ' - Electrovalve: ' + device.electrovalvulaId + ' - Ubicacion: ' + device.ubicacion" >
+                [appTooltip]="device.nombre + ' -- ID: ' + device.dispositivoId + ' -- Electrovalvula: ' + device.electrovalvulaId + ' -- Ubicacion: ' + device.ubicacion" >
 
         <ion-label>
-          <h2>{{ device.nombre }}</h2>
+          <h2 appColorear>{{ device.nombre }}</h2>
           <p>
             <ion-icon name="location" slot="start"></ion-icon>
             {{ device.ubicacion }}
