--- a/src/frontend/dam/src/app/home/home.page.scss
+++ b/src/frontend/dam/src/app/home/home.page.scss
@@ -1,9 +1,9 @@
 ion-toolbar {
-  --background: #a4d2d3;
+  --background: #96ad9e;
 }
 
 ion-toolbar ion-title {
-  background-color: #a4d2d3;
+  background-color: #96ad9e;
   color: black;
   font-weight: 600;
   font-size: 22px;
@@ -13,7 +13,7 @@ ion-toolbar ion-title {
 }
 
 .content {
-  --background: #e8d3ae;;
+  --background: #e8d3ae;
   display: flex;
   justify-content: center;
   align-items: center;
