--- a/src/frontend/dam/src/app/detalle-sensor/detalle-sensor.component.html
+++ b/src/frontend/dam/src/app/detalle-sensor/detalle-sensor.component.html
@@ -1,11 +1,15 @@
-<div id="gauge-chart-container" style="width: 100%; height: 400px;"></div>
+<div id="gauge-chart-container" style="width: 100%; height: 400px;" class="container-chart"></div>
 
 <div class="button-container">
   <button class="button"(click)="toggleElectrovalve()">
     {{ electrovalveOpen ? 'CERRAR ELECTROVALVULA' : 'ABRIR ELECTROVALVULA' }}
   </button>
-  <button class="button" (click)="verTodasLasMediciones(deviceId)">VER TODAS LAS MEDICIONES</button>
-  <table class="measurement-table" *ngIf="measurements.length > 0">
+  
+  <button class="button" (click)="toggleMedicionesTabla()">
+    {{ showTable ? 'OCULTAR MEDICIONES' : 'VER TODAS LAS MEDICIONES' }}
+  </button>
+
+  <table class="measurement-table" *ngIf="showTable && measurements.length > 0">
     <thead>
       <tr>
         <th>Fecha</th>
@@ -19,8 +23,10 @@
       </tr>
     </tbody>
   </table>
-  <button class="button" (click)="verLogRiegosElectrovalvula(electrovalveId)">VER LOG RIEGOS</button>
-  <table class="measurement-table" *ngIf="riegos.length > 0">
+  <button class="button" (click)="toggleLogsTabla()">
+    {{ showTableRiegos ? 'OCULTAR LOGS' : 'VER LOG RIEGOS' }}
+  </button>
+  <table class="measurement-table" *ngIf="showTableRiegos && riegos.length > 0">
     <thead>
       <tr>
         <th>Log riego Id</th>
