--- a/src/frontend/dam/src/app/detalle-sensor/detalle-sensor.component.scss
+++ b/src/frontend/dam/src/app/detalle-sensor/detalle-sensor.component.scss
@@ -20,11 +20,6 @@
   background-color: "#ffffff"
 }
 
-.button-container.night-mode {
-  background-color: #212121; /* Dark background */
-  color: #ffffff; /* White text */
-}
-
 .button {
   display: block;
   width: 100%;
@@ -33,7 +28,7 @@
   padding: 10px 0;
   font-size: 16px;
   text-align: center;
-  color: white;
+  color: rgb(114, 106, 106);
   background-color: #d7bde2;
   border: 2px solid #d7bde2;
   border-radius: 5px;
@@ -54,13 +49,16 @@
   border-collapse: collapse;
   margin-top: 20px; 
   margin-bottom: 20px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-size: 13px;
 }
 
 .measurement-table th,
 .measurement-table td {
   padding: 10px;
   text-align: left;
-  border-bottom: 1px solid #ddd;
+  //border-bottom: 1px solid #ddd;
+  border: 1px solid #ddd;
 }
 
 .measurement-table th {
@@ -74,4 +72,8 @@
 
 .measurement-table tbody tr:hover {
   background-color: #f2f2f2;
+}
+
+.container-chart {
+  margin-top: 15px;
 }
