--- a/src/frontend/dam/src/app/detalle-sensor/detalle-sensor.component.html
+++ b/src/frontend/dam/src/app/detalle-sensor/detalle-sensor.component.html
@@ -8,42 +8,49 @@
   <button class="button" (click)="toggleMedicionesTabla()">
     {{ showTable ? 'OCULTAR MEDICIONES' : 'VER TODAS LAS MEDICIONES' }}
   </button>
-
-  <table class="measurement-table" *ngIf="showTable && measurements.length > 0">
-    <thead>
-      <tr>
-        <th>Fecha</th>
-        <th>Valor</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let measurement of measurements">
-        <td>{{ measurement.fecha }}</td>
-        <td>{{ measurement.valor }}</td>  
-      </tr>
-    </tbody>
-  </table>
+  <div class="measurement-table-container">
+    <table class="measurement-table" *ngIf="showTable && measurements.length > 0">
+      <thead>
+        <tr>
+          <th>Dispositivo ID</th>
+          <th>Fecha</th>
+          <th>Valor</th>
+          <th>Medicion ID</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let measurement of measurements">
+          <td>{{ measurement.dispositivoId }}</td>
+          <td>{{ measurement.fecha }}</td>
+          <td>{{ measurement.valor }}</td>  
+          <td>{{ measurement.medicionId }}</td> 
+        </tr>
+      </tbody>
+    </table>
+  </div>
   <button class="button" (click)="toggleLogsTabla()">
     {{ showTableRiegos ? 'OCULTAR LOGS' : 'VER LOG RIEGOS' }}
   </button>
-  <table class="measurement-table" *ngIf="showTableRiegos && riegos.length > 0">
-    <thead>
-      <tr>
-        <th>Log riego Id</th>
-        <th>Apertura</th>
-        <th>Fecha</th>
-        <th>Electrovalula Id</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let riego of riegos">
-        <td>{{ riego.logRiegoId}}</td>
-        <td>{{ riego.apertura }}</td>  
-        <td>{{ riego.fecha }}</td>
-        <td>{{ riego.electrovalvulaId }}</td>  
-      </tr>
-    </tbody>
-  </table>
+  <div class="measurement-table-container">
+    <table class="measurement-table" *ngIf="showTableRiegos && riegos.length > 0">
+      <thead>
+        <tr>
+          <th>Log riego Id</th>
+          <th>Apertura</th>
+          <th>Fecha</th>
+          <th>Electrovalula Id</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let riego of riegos">
+          <td>{{ riego.logRiegoId}}</td>
+          <td>{{ riego.apertura }}</td>  
+          <td>{{ riego.fecha }}</td>
+          <td>{{ riego.electrovalvulaId }}</td>  
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 
 
