--- a/src/frontend/dam/src/app/detalle-sensor/detalle-sensor.component.scss
+++ b/src/frontend/dam/src/app/detalle-sensor/detalle-sensor.component.scss
@@ -15,7 +15,7 @@
 .button-container {
   margin-top: 20px;
   width: 100%;
-  max-width: 400px;
+  max-width: 500px;
   margin-bottom: 40px;
   background-color: "#ffffff"
 }
@@ -76,4 +76,12 @@
 
 .container-chart {
   margin-top: 15px;
+}
+
+.measurement-table-container {
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto; 
+  align-items: center;
+  justify-content: center;
 }
